// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render should not render when no shard details are provided 1`] = `""`;

exports[`render should render with failures 1`] = `
<Fragment>
  <EuiFlexGroup
    justifyContent="spaceBetween"
  >
    <EuiFlexItem
      grow={false}
    >
      <EuiTitle
        size="xxxs"
      >
        <h4>
          Shards
        </h4>
      </EuiTitle>
    </EuiFlexItem>
    <EuiFlexItem
      grow={false}
    >
      <EuiButtonEmpty
        flush="left"
        onClick={[Function]}
        size="xs"
      >
        View 1 failed shard
      </EuiButtonEmpty>
    </EuiFlexItem>
  </EuiFlexGroup>
  <EuiFlexGroup
    justifyContent="spaceBetween"
  >
    <EuiFlexItem
      grow={false}
    >
      2 total shards
    </EuiFlexItem>
    <EuiFlexItem
      grow={false}
    >
      1 of 2 successful
    </EuiFlexItem>
  </EuiFlexGroup>
</Fragment>
`;

exports[`render should render with no failures 1`] = `
<Fragment>
  <EuiFlexGroup
    justifyContent="spaceBetween"
  >
    <EuiFlexItem
      grow={false}
    >
      <EuiTitle
        size="xxxs"
      >
        <h4>
          Shards
        </h4>
      </EuiTitle>
    </EuiFlexItem>
  </EuiFlexGroup>
  <EuiFlexGroup
    justifyContent="spaceBetween"
  >
    <EuiFlexItem
      grow={false}
    >
      2 total shards
    </EuiFlexItem>
    <EuiFlexItem
      grow={false}
    >
      2 of 2 successful
    </EuiFlexItem>
  </EuiFlexGroup>
</Fragment>
`;
